fix: adjust errors
